--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,16 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="description" content="Calculate uptime, downtime, SLA in a simplpe to use interface that minimizes the use of the mouse.  It is fast loading from a content delivery network and built with React.js to be a single page app.  For example 99.9% is converted into for a year of 8 hours, 45 minutes, 36 seconds of downtime.  Or five nines (99.999%) is 5 minutes and 15 seconds a year of downtime.  UP71.ME is a short URL and stands for uptime." />
+  <meta name="description" content="Calculate uptime, downtime, SLA in a simple to use interface that minimizes the use of the mouse.  It is fast loading from a content delivery network and built with React.js to be a single page app.  For example 99.9% is converted into for a year of 8 hours, 45 minutes, 36 seconds of downtime.  Or five nines (99.999%) is 5 minutes and 15 seconds a year of downtime.  UP71.ME is a short URL and stands for uptime." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+
+  <link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+  crossorigin="anonymous"
+/>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
